# darknet_embedded

./: CMakeLists.txt  LICENSE  README.md  ReadMe.md  buildMe.sh  cleanMe.sh  installMe.sh
Toolchain_Files/: stm32_toolchain.cmake
buildroot/darknet_embedded/: Config.in  darknet_embedded.hash  darknet_embedded.mk
include/: darknet.h
src/: box.c  network.c  utils.c  yolo_layer.c
